Change some elements size

--- a/Pizza Shop/index_pizza.html
+++ b/Pizza Shop/index_pizza.html
@@ -7,9 +7,8 @@
 	</head>
 	<body>
 	    <div class="container">
+		    <div id="screenSize">
 		    <header>Pizza Shop</header>
-			<br>
-			<br>
 			<br>
 			<br>
 		    <div class="select">
@@ -62,16 +61,14 @@
 				<input class="veggies" type="checkbox" name="Veggie" value="Jalapeno"> Jalapeno<br>
 			</div>		 			 			
 		    </div>	
-		<br>
-		<br>
-		<br>
+		    <br>
+			<br>
             <div class="button">
 			    <button class="sub-button" onclick="getReceipt()">Order Now</button>
 			    <button class="sub-button" onclick="cancelOrder()">Cancel</button>
 		    </div>		
-	    <br>
-		<br>
-		<br>
+	        <br>
+			<br>
 		    <div id="cart">		   
 			    <div id="title1"><h3>You Ordered:</h3></div>
 			    <div id="title2"><h3>Subtotal:</h3></div>
@@ -79,7 +76,8 @@
 			    <div id="text2"><p></p></div>			
 			    <div id="totalPrice"><h3>Total Price</h3></div>
 			    <div id="totalAmount"><p></p></div>
-		    </div>						
+		    </div>
+        </div>			
 	    </div>
 	<script src="j_script.js"></script>
 	</body>
